--- a/src/pages/SelectLevelPage/SelectLevelPage.module.css
+++ b/src/pages/SelectLevelPage/SelectLevelPage.module.css
@@ -69,9 +69,24 @@
   gap: 15px;
   margin-top: 48px;
   margin-bottom: 28px;
-  color: #0080c1;
+  font-size: 24px;
+  line-height: 32px;
+}
+
+.checkbox_text {
+  font-size: 24px;
+  line-height: 32px;
+}
+
+.checkbox_input {
+  width: 22px;
+  height: 17px;
+  margin-top: 7px;
+  margin-left: 4px;
+}
+
+.leaderboardLink {
   font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 24px;
+  line-height: 32px;
+  color: #004980;
 }
