--- a/src/components/EndGameModal/EndGameModal.module.css
+++ b/src/components/EndGameModal/EndGameModal.module.css
@@ -9,6 +9,17 @@
   align-items: center;
 }
 
+.modal2 {
+  width: 480px;
+  height: 634px;
+  border-radius: 12px;
+  background: #c2f5ff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .image {
   width: 96px;
   height: 96px;
@@ -23,7 +34,7 @@
   font-style: normal;
   font-weight: 400;
   line-height: 48px;
-
+  text-align: center;
   margin-bottom: 28px;
 }
 
@@ -48,4 +59,22 @@
   line-height: 72px;
 
   margin-bottom: 40px;
+}
+
+.input {
+  border: none;
+  border-radius: 10px;
+  width: 276px;
+  height: 45px;
+  margin-bottom: 28px;
+  text-align: center;
+  line-height: 32px;
+  font-size: 24px;
+}
+
+.leaderboardLink {
+  font-size: 18px;
+  line-height: 32px;
+  color: #004980;
+  margin-top: 18px;
 }
