--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -103,3 +103,21 @@
   height: 68px;
   cursor: pointer;
 }
+
+.tooltip {
+  width: 222px;
+  height: 223px;
+  background-color: #c2f5ff;
+  position: absolute;
+  border-radius: 12px;
+  z-index: 1;
+}
+
+.tooltipText {
+  font-size: 18px;
+  line-height: 24px;
+  color: #004980;
+  text-align: center;
+  margin-top: 15px;
+  font-weight: 400;
+}
