--- a/src/pages/Leaderboard/leaderboard.module.css
+++ b/src/pages/Leaderboard/leaderboard.module.css
@@ -45,3 +45,19 @@ ul {
 .opacityclass {
   color: #999999;
 }
+
+.tooltip {
+  width: 174px;
+  height: 78px;
+  background-color: #c2f5ff;
+  position: absolute;
+  border-radius: 12px;
+}
+
+.tooltipText {
+  font-size: 18px;
+  line-height: 24px;
+  color: #004980;
+  text-align: center;
+  margin-top: 15px;
+}
